[package]
name = "basalt-networking"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["default"] }
governor = "0.8"
tower = "0.5"
tower_governor = "0.6"
tower-http = { version = "0.6", features = ["trace"] }
axum-extra = { version = "0.12", features = ["cookie", "typed-header"] }
headers = "0.4"
http = "1"
reqwest = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

basalt-networking-api-server = { path = "generated/api-server" }
basalt-admin-internal-client = { path = "generated/api-clients/admin-internal" }
basalt-vultiserver-client = { path = "generated/api-clients/vultiserver" }
