[package]
name = "basalt-admin-internal-client"
version = "0.1.0"
authors = ["OpenAPI Generator team and contributors"]
description = "Internal health check service for Basalt infrastructure. Monitors the health of vultiserver, networking, and Redis services."
# Override this license by providing a License Object in the OpenAPI.
license = "Unlicense"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
reqwest = { version = "^0.13", default-features = false, features = ["json", "multipart", "query", "form"] }

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls"]
